# pong

./: CMakeLists.txt  README.md  build.sh  imgui.ini
assets/shaders/: default_frag.glsl  default_vert.glsl
src/: ball.h  game.cpp  game.h  input.cpp  main.cpp  paddle.h  window.cpp  window.h
src/graphics/: renderer.cpp
src/libs/glad/: glad.c  glad.h
src/pong/: audio.cpp  audio.h  ball.cpp  ball.h  game.cpp  game.h  global.h  input.h  object.h  paddle.cpp  paddle.h  ui.cpp  ui.h  window.cpp  window.h
src/pong/graphics/: quad.cpp  quad.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/pong/utils/: collision.h  fileutils.h  random.h
src/utils/: fileutils.cpp  log.h
